--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff05ebdd510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f8db617d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff05e691450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff05e691650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f8cbae5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f8cbae7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff05ee1ed10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff05ee1ef10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f8d338e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1f8d345090&gt;]</pre>
 </div>
 
 </div>
