--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f1ee9d490&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efe8da71710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f1ed5f610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f1ed5f810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe8db335d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe8db337d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f1f4e9f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f1f4f9190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efe8e2bde50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efe8e2ca090&gt;]</pre>
 </div>
 
 </div>
