--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb642113e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9dffbe8390&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb6421d5690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb6421d5890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dffcaa450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dffcaa650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb64296c050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb64296c250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dffcd4410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9e00435f90&gt;]</pre>
 </div>
 
 </div>
