--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f77992279d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd118d2f6d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7798f537d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7798c02610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd119172410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd119172650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7798c2be90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f779938cf50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd11957dd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd11957df90&gt;]</pre>
 </div>
 
 </div>
