--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b4d84e510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3432fa990&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b4d2cb4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b4d2cb6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff343166590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3431667d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b4da56d10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5b4da56f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3438f0e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3438fd110&gt;]</pre>
 </div>
 
 </div>
