--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb02ef80610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38b9bc98d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb02ef1b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb02ef1b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38b99cc6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38b99cc8d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb02f6a8b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb02f6a8d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38b9dbb090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38b9dbb290&gt;]</pre>
 </div>
 
 </div>
