--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb1b8a9b150&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1c2ab6910&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b8508350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1b8508550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c28bd590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1c28bd790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb1b8c94c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb1b8c94e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1c2ccadd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1c2ccafd0&gt;]</pre>
 </div>
 
 </div>
