--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbc076c25d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb68f3a7f90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc07a072d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc07c1ae10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb68ee3e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb68ee3e4d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbc07e17c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbc07deeb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb68f5cac50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb68f5cae50&gt;]</pre>
 </div>
 
 </div>
