--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb4df20b350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8124f7710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4de54fa90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4de1f8810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8126e4590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff8126e4790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fb4de92e1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fb4de9500d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff812af2e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff812b000d0&gt;]</pre>
 </div>
 
 </div>
