--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff8124f7710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe40be0bb90&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff8126e4590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff8126e4790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe40bc8e2d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe40bfe0710&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff812af2e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff812b000d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe40c3e9b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe40c3f1f90&gt;]</pre>
 </div>
 
 </div>
