--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f46dc8eb290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f525e82a9d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46dc359650&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46dc359850&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f525e2cc590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f525e2cc790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f46dcae5f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f46dcaf3190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f525ea57e50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f525ea64090&gt;]</pre>
 </div>
 
 </div>
